--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
               
         </ul>
         <button>Start New Game</button>
+        <button>Start New Game</button>
+        <button>Start New Game</button>
     </main>
 </body>
 </html>
+
+<!-- aaaaa -->
