--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
         </ul>
         <button>Start New Game</button>
         <button>Start New Game</button>
-
+        <button>Start New Game</button>
+        <button>Start New Game</button>
     </main>
 </body>
 </html>
