--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
         <button>Start New Game</button>
         <button>Start New Game</button>
         <button>Start New Game</button>
+                <button>Start New Game</button>
+        <button>Start New Game</button>
         <button>Start New Game</button>
     </main>
 </body>
