--- a/LearningJS2/JS_Vars/index.html
+++ b/LearningJS2/JS_Vars/index.html
@@ -11,9 +11,9 @@
     <h1>Hello Javascript</h1>
 
 
-    <!-- <script src="js/01-basics.js"></script> -->
-    <!-- <script src="js/02-conditions.js"></script> -->
-    <script src="js/03-functions.js"> </script>
+    <!-- <script src="/LearningJS2/JS_Vars/01-basics.js"></script> -->
+    <!-- <script src="/LearningJS2/JS_Vars/02-conditions.js"></script> -->
+    <script src="/LearningJS2/JS_Vars/03-functions.js"> </script>
 </body>
 
 </html>
