finished leaning vars and conditions

--- a/LearningJS2/JS_Vars/index.html
+++ b/LearningJS2/JS_Vars/index.html
@@ -13,7 +13,7 @@
 
     <!-- <script src="/LearningJS2/JS_Vars/01-basics.js"></script> -->
     <!-- <script src="/LearningJS2/JS_Vars/02-conditions.js"></script> -->
-    <script src="/LearningJS2/JS_Vars/03-functions.js"> </script>
+    <!-- <script src="/LearningJS2/JS_Vars/03-functions.js"> </script> -->
 </body>
 
 </html>
