--- a/LearningJS2/Exercise-Runner/runing.html
+++ b/LearningJS2/Exercise-Runner/runing.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-     <script src="/LearningJS2/Exercise-Runner/myEX.js"></script>
+     <script src="/myEX.js"></script>
 
 <h1>My First Heading</h1>
 <p>My first paragraph.</p>
