--- a/LearningJS2/JS_objects/runing.html
+++ b/LearningJS2/JS_objects/runing.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html>
-<body>
-     <script src="/JS_objects/myEX.js"></script>
+<html lang="he">
+    <head>
+    <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TypeScript Test</title>
+    </head>
+    <body>
+    <h1>בודקים TypeScript</h1>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
-
-</body>
-
-
+    <!-- שים לב: מחברים JS, לא TS -->
+    <script src="./dist/main.js"></script>
+    </body>
 </html>
