--- a/LearningJS2/JS_objects/runing.html
+++ b/LearningJS2/JS_objects/runing.html
@@ -9,6 +9,6 @@
     <h1>בודקים TypeScript</h1>
 
     <!-- שים לב: מחברים JS, לא TS -->
-    <script src="./dist/main.js"></script>
+    <script src="./dist/object_exs.js"></script>
     </body>
 </html>
